dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=beastbucksd.1
endif

if ENABLE_QT
  dist_man1_MANS+=beastbucks-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=beastbucks-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=beastbucks-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=beastbucks-wallet.1
endif
endif
